# CMUG

./: README.MD
linux/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  confgen.c  confgen.h  config.h.in  configure  configure.ac  connection.sh  encode.txt  gen.c  gen.h  main.c  uuidgen.c  uuidgen.h
linux/autom4te.cache/: output.0  requests  traces.0
linux/data/: .Makefile.am.swp  Makefile.am  cmcc@.service.in  pppoe
linux/src/: Makefile.am  Makefile.in  cdatatype.h  confgen.c  confgen.h  gen.c  gen.h  main.c  main.h
linux/systemd/: cmcc@.service
windows/: cdatatype.h  connect.c  gen.c  gen.h  main.c  uuidgen.c
windows/CMUG/: 自动连接.bat  说明.txt
